Fix: Fix text overflowing issues on minipost title and minipost description; re-position author and time of post elements

--- a/frontend/src/styles/Forum.css
+++ b/frontend/src/styles/Forum.css
@@ -40,6 +40,10 @@
     padding: 0 20px;
 }
 
+.rando-easter-egg {
+    
+}
+
 
 .infinite-scroll-component>.post-container {
     gap: 10px;
